--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -6,7 +6,7 @@ on:
       - update_action
   pull_request:
     branches:
-      - main
+      - master
   workflow_dispatch:
 
 jobs:
@@ -35,33 +35,9 @@ jobs:
   #     - name: Workflow Teardown
   #       uses: ./.github/actions/ios/teardown
 
-  # autotests-second-version:
-  #   name: iOS ${{ vars.IOS_SECOND_DEVICE_VERSION }} Automation
-  #   runs-on: ${{ vars.IOS_SECOND_VM }}
-
-  #   steps:
-  #     - name: Checkout Automation Code
-  #       uses: actions/checkout@v4
-
-  #     - name: Environment Setup
-  #       uses: ./.github/actions/ios/setup
-  #       with:
-  #         ios-download-build: "${{ vars.IOS_BUILD_URL }}"
-  #         ios-model: "${{ vars.IOS_SECOND_DEVICE_MODEL }}"
-  #         ios-version: ${{ vars.IOS_SECOND_DEVICE_VERSION }}
-
-  #     - name: Execute Automation Tests
-  #       uses: ./.github/actions/ios/autotests
-  #       with:
-  #         ios-model: ${{ vars.IOS_SECOND_DEVICE_MODEL }}
-  #         ios-version: ${{ vars.IOS_SECOND_DEVICE_VERSION }}
-
-  #     - name: Workflow Teardown
-  #       uses: ./.github/actions/ios/teardown
-
-  autotests-third-version:
-    name: iOS ${{ vars.IOS_THIRD_DEVICE_VERSION }} Automation
-    runs-on: ${{ vars.IOS_THIRD_VM }}
+  autotests-second-version:
+    name: iOS ${{ vars.IOS_SECOND_DEVICE_VERSION }} Automation
+    runs-on: ${{ vars.IOS_SECOND_VM }}
 
     steps:
       - name: Checkout Automation Code
@@ -71,14 +47,38 @@ jobs:
         uses: ./.github/actions/ios/setup
         with:
           ios-download-build: "${{ vars.IOS_BUILD_URL }}"
-          ios-model: "${{ vars.IOS_THIRD_DEVICE_MODEL }}"
-          ios-version: ${{ vars.IOS_THIRD_DEVICE_VERSION }}
+          ios-model: "${{ vars.IOS_SECOND_DEVICE_MODEL }}"
+          ios-version: ${{ vars.IOS_SECOND_DEVICE_VERSION }}
 
       - name: Execute Automation Tests
         uses: ./.github/actions/ios/autotests
         with:
-          ios-model: ${{ vars.IOS_THIRD_DEVICE_MODEL }}
-          ios-version: ${{ vars.IOS_THIRD_DEVICE_VERSION }}
+          ios-model: ${{ vars.IOS_SECOND_DEVICE_MODEL }}
+          ios-version: ${{ vars.IOS_SECOND_DEVICE_VERSION }}
 
       - name: Workflow Teardown
         uses: ./.github/actions/ios/teardown
+
+  # autotests-third-version:
+  #   name: iOS ${{ vars.IOS_THIRD_DEVICE_VERSION }} Automation
+  #   runs-on: ${{ vars.IOS_THIRD_VM }}
+
+  #   steps:
+  #     - name: Checkout Automation Code
+  #       uses: actions/checkout@v4
+
+  #     - name: Environment Setup
+  #       uses: ./.github/actions/ios/setup
+  #       with:
+  #         ios-download-build: "${{ vars.IOS_BUILD_URL }}"
+  #         ios-model: "${{ vars.IOS_THIRD_DEVICE_MODEL }}"
+  #         ios-version: ${{ vars.IOS_THIRD_DEVICE_VERSION }}
+
+  #     - name: Execute Automation Tests
+  #       uses: ./.github/actions/ios/autotests
+  #       with:
+  #         ios-model: ${{ vars.IOS_THIRD_DEVICE_MODEL }}
+  #         ios-version: ${{ vars.IOS_THIRD_DEVICE_VERSION }}
+
+  #     - name: Workflow Teardown
+  #       uses: ./.github/actions/ios/teardown
