--- a/.github/actions/ios/autotests/action.yml
+++ b/.github/actions/ios/autotests/action.yml
@@ -1,5 +1,5 @@
-name: Execute Automation Tests
-description: "Execute Automation Tests"
+name: Execute Tests for iOS Simulator
+description: "Execute Tests for iOS Simulator"
 inputs:
   ios-model:
     required: true
@@ -23,6 +23,10 @@ runs:
         modify_file.close()
         exit()
         EOF
+      shell: bash
+
+    - name: Start Appium Server
+      run: appium &
       shell: bash
 
     - name: Run and Test on iOS Simulator
