--- a/.github/actions/ios/setup/action.yml
+++ b/.github/actions/ios/setup/action.yml
@@ -1,5 +1,5 @@
-name: Enviroment Setup
-description: "Enviroment Setup"
+name: iOS Enviroment Setup
+description: "iOS Enviroment Setup"
 inputs:
   ios-download-build:
     required: true
@@ -10,8 +10,8 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Set Up Homebrew
-      uses: Homebrew/actions/setup-homebrew@master
+    # - name: Set Up Homebrew
+    #   uses: Homebrew/actions/setup-homebrew@master
 
     - name: Set Up Xcode
       run: sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
@@ -25,30 +25,26 @@ runs:
       run: xcrun simctl list devices
       shell: bash
 
-    - name: Set Up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.12.0"
+    # - name: Set Up Python
+    #   uses: actions/setup-python@v4
+    #   with:
+    #     python-version: "3.12.0"
 
-    - name: Install Frameworks and Tools
-      run: |
-        npm i --location=global appium
-        appium driver install xcuitest
-      shell: bash
+    # - name: Install Appium
+    #   run: |
+    #     npm i --location=global appium
+    #     appium driver install xcuitest
+    #   shell: bash
 
-    - name: Create and Activate Venv
-      run: |
-        python3 -m venv venv
-        source venv/bin/activate
-      shell: bash
+    # - name: Create and Activate Venv
+    #   run: |
+    #     python3 -m venv venv
+    #     source venv/bin/activate
+    #   shell: bash
 
-    - name: Install Dependencies
-      run: pip install -r requirements.txt
-      shell: bash
-
-    - name: Start Appium Server
-      run: appium &
-      shell: bash
+    # - name: Install Dependencies
+    #   run: pip install -r requirements.txt
+    #   shell: bash
 
     - name: Download and Extract iOS Build
       run: |
