--- a/.github/workflows/android_autotests.yml
+++ b/.github/workflows/android_autotests.yml
@@ -3,7 +3,7 @@ name: Android Automation
 on:
   push:
     branches:
-      - master
+      - update_action
   pull_request:
     branches:
       - master
@@ -12,33 +12,42 @@ jobs:
   test:
     name: Android Automation Test
     runs-on: macos-latest
+    strategy:
+      matrix:
+        api-level: [29, 30, 31]
 
     steps:
-      - name: Set up Homebrew
-        id: set-up-homebrew
-        uses: Homebrew/actions/setup-homebrew@master
+      # - name: Set Up Homebrew
+      #   uses: Homebrew/actions/setup-homebrew@master
 
       - name: Checkout Automation Code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.9
+      # - name: Set Up Python
+      #   uses: actions/setup-python@v4
+      #   with:
+      #     python-version: "3.12.0"
 
-      - name: Create and Activate Venv
-        run: |
-          python3.9 -m venv venv
-          source venv/bin/activate
+      # - name: Create and Activate Venv
+      #   run: |
+      #     python3 -m venv venv
+      #     source venv/bin/activate
 
-      - name: Install frameworks and tools
+      # - name: Install Appium
+      #   run: |
+      #     npm i --location=global appium
+      #     appium driver install xcuitest
+      #   shell: bash
+
+      - name: Environment Setup
+        uses: ./.github/actions/setup
+
+      - name: Install Android Platform
         run: |
-          npm i --location=global appium
-          appium driver install uiautomator2
           brew update
           brew install android-platform-tools
 
-      - name: Set up Environment Variables
+      - name: Set Up Environment Variables
         run: |
           echo 'export ANDROID_HOME=~/Library/Android/sdk' >> $HOME/.bashrc
           echo 'export PATH=$PATH:$ANDROID_HOME/tools/bin' >> $HOME/.bashrc
@@ -52,8 +61,8 @@ jobs:
       - name: Accept Android Licenses
         run: yes | source $HOME/.bashrc && $ANDROID_HOME/tools/bin/sdkmanager --licenses
 
-      - name: Install Dependencies
-        run: pip install -r requirements.txt
+      # - name: Install Dependencies
+      #   run: pip install -r requirements.txt
 
       - name: Download APK File
         run: |
@@ -76,7 +85,7 @@ jobs:
       - name: Create AVD and Run Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 29
+          api-level: ${{ matrix.api-level }}
           force-avd-creation: false
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: false
