update keywords and locators for android

--- a/.github/actions/ios/autotests/action.yml
+++ b/.github/actions/ios/autotests/action.yml
@@ -34,7 +34,7 @@ runs:
         xcrun simctl install "${{ env.SIMULATOR_UDID }}" "App/test.app"
         xcrun simctl launch "${{env.SIMULATOR_UDID }}" "com.lanhuynh.test"
         sleep 10
-        robot -d Reports/ios_${{ inputs.ios-version }} --loglevel TRACE UiTests/TestSuite.robot
+        robot -d Reports/ios_${{ inputs.ios-version }} --loglevel TRACE UiTests/TestSuite_ios.robot
       shell: bash
 
     - name: Archive Test Artifacts
