--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -37,56 +37,56 @@ jobs:
       - name: Workflow Teardown
         uses: ./.github/actions/ios/teardown
 
-  autotests-second-version:
-    name: iOS ${{ vars.IOS_SECOND_DEVICE_VERSION }} Automation
-    runs-on: ${{ vars.IOS_SECOND_VM }}
+  # autotests-second-version:
+  #   name: iOS ${{ vars.IOS_SECOND_DEVICE_VERSION }} Automation
+  #   runs-on: ${{ vars.IOS_SECOND_VM }}
 
-    steps:
-      - name: Checkout Automation Code
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout Automation Code
+  #       uses: actions/checkout@v4
 
-      - name: Environment Setup
-        uses: ./.github/actions/setup
+  #     - name: Environment Setup
+  #       uses: ./.github/actions/setup
 
-      - name: iOS Environment Setup
-        uses: ./.github/actions/ios/setup
-        with:
-          ios-download-build: "${{ vars.IOS_BUILD_URL }}"
-          ios-model: "${{ vars.IOS_SECOND_DEVICE_MODEL }}"
-          ios-version: ${{ vars.IOS_SECOND_DEVICE_VERSION }}
+  #     - name: iOS Environment Setup
+  #       uses: ./.github/actions/ios/setup
+  #       with:
+  #         ios-download-build: "${{ vars.IOS_BUILD_URL }}"
+  #         ios-model: "${{ vars.IOS_SECOND_DEVICE_MODEL }}"
+  #         ios-version: ${{ vars.IOS_SECOND_DEVICE_VERSION }}
 
-      - name: Execute Automation Tests
-        uses: ./.github/actions/ios/autotests
-        with:
-          ios-model: ${{ vars.IOS_SECOND_DEVICE_MODEL }}
-          ios-version: ${{ vars.IOS_SECOND_DEVICE_VERSION }}
+  #     - name: Execute Automation Tests
+  #       uses: ./.github/actions/ios/autotests
+  #       with:
+  #         ios-model: ${{ vars.IOS_SECOND_DEVICE_MODEL }}
+  #         ios-version: ${{ vars.IOS_SECOND_DEVICE_VERSION }}
 
-      - name: Workflow Teardown
-        uses: ./.github/actions/ios/teardown
+  #     - name: Workflow Teardown
+  #       uses: ./.github/actions/ios/teardown
 
-  autotests-third-version:
-    name: iOS ${{ vars.IOS_THIRD_DEVICE_VERSION }} Automation
-    runs-on: ${{ vars.IOS_THIRD_VM }}
+  # autotests-third-version:
+  #   name: iOS ${{ vars.IOS_THIRD_DEVICE_VERSION }} Automation
+  #   runs-on: ${{ vars.IOS_THIRD_VM }}
 
-    steps:
-      - name: Checkout Automation Code
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout Automation Code
+  #       uses: actions/checkout@v4
 
-      - name: Environment Setup
-        uses: ./.github/actions/setup
+  #     - name: Environment Setup
+  #       uses: ./.github/actions/setup
 
-      - name: iOS Environment Setup
-        uses: ./.github/actions/ios/setup
-        with:
-          ios-download-build: "${{ vars.IOS_BUILD_URL }}"
-          ios-model: "${{ vars.IOS_THIRD_DEVICE_MODEL }}"
-          ios-version: ${{ vars.IOS_THIRD_DEVICE_VERSION }}
+  #     - name: iOS Environment Setup
+  #       uses: ./.github/actions/ios/setup
+  #       with:
+  #         ios-download-build: "${{ vars.IOS_BUILD_URL }}"
+  #         ios-model: "${{ vars.IOS_THIRD_DEVICE_MODEL }}"
+  #         ios-version: ${{ vars.IOS_THIRD_DEVICE_VERSION }}
 
-      - name: Execute Automation Tests
-        uses: ./.github/actions/ios/autotests
-        with:
-          ios-model: ${{ vars.IOS_THIRD_DEVICE_MODEL }}
-          ios-version: ${{ vars.IOS_THIRD_DEVICE_VERSION }}
+  #     - name: Execute Automation Tests
+  #       uses: ./.github/actions/ios/autotests
+  #       with:
+  #         ios-model: ${{ vars.IOS_THIRD_DEVICE_MODEL }}
+  #         ios-version: ${{ vars.IOS_THIRD_DEVICE_VERSION }}
 
-      - name: Workflow Teardown
-        uses: ./.github/actions/ios/teardown
+  #     - name: Workflow Teardown
+  #       uses: ./.github/actions/ios/teardown
