--- a/.github/workflows/android_autotests.yml
+++ b/.github/workflows/android_autotests.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        api-level: [29, 30, 31]
+        api-level: [29, 30]
 
     steps:
       - name: Checkout Automation Code
