try two ios and one android

--- a/.github/workflows/android_autotests.yml
+++ b/.github/workflows/android_autotests.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Create AVD and Run Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: ${{ matrix.api-level }}
+          api-level: 29
           force-avd-creation: false
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: false
