--- a/.github/workflows/android_autotests.yml
+++ b/.github/workflows/android_autotests.yml
@@ -19,8 +19,10 @@ jobs:
       - name: Environment Setup
         uses: ./.github/actions/setup
 
-      - name: Install Android Platform
+      - name: Install Appium and Android Platform
         run: |
+          npm i --location=global appium
+          appium driver install uiautomator2
           brew update
           brew install android-platform-tools
 
