test android11 and ios15 ios16

--- a/.github/actions/ios/setup/action.yml
+++ b/.github/actions/ios/setup/action.yml
@@ -14,6 +14,7 @@ runs:
       run: |
         npm i --location=global appium
         appium driver install xcuitest
+      shell: bash
 
     - name: Set Up Xcode
       run: sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
