--- a/.github/workflows/android_autotests.yml
+++ b/.github/workflows/android_autotests.yml
@@ -41,10 +41,7 @@ jobs:
         run: |
           source $HOME/.bashrc && $ANDROID_HOME/tools/bin/sdkmanager --list
           yes | source $HOME/.bashrc && $ANDROID_HOME/tools/bin/sdkmanager --licenses
-          source $HOME/.bashrc && $ANDROID_HOME/tools/bin/sdkmanager --verbose --channel=0 "system-images;android-30;default;x86"
-          source $HOME/.bashrc && $ANDROID_HOME/tools/bin/sdkmanager --verbose --channel=0 "build-tools;31.0.0"
-          source $HOME/.bashrc && $ANDROID_HOME/tools/bin/sdkmanager --verbose --channel=0 "platform-tools"
-          source $HOME/.bashrc && $ANDROID_HOME/tools/bin/sdkmanager --verbose --channel=0 "emulator"
+          source $HOME/.bashrc && $ANDROID_HOME/tools/bin/sdkmanager --verbose --channel=0 "system-images;android-30;default;x86_64"
           popd
 
       - name: Download APK File
