--- a/.github/workflows/android_autotests.yml
+++ b/.github/workflows/android_autotests.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        api-level: [29, 31, 34]
+        api-level: [29, 31]
     steps:
       - name: Checkout Automation Code
         uses: actions/checkout@v4
