--- a/.github/workflows/android_autotests.yml
+++ b/.github/workflows/android_autotests.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        api-level: [29, 31]
+        api-level: [31, 33]
     steps:
       - name: Checkout Automation Code
         uses: actions/checkout@v4
@@ -72,13 +72,13 @@ jobs:
           script: |
             adb devices
             adb install -r App/application.apk
-            robot -d Reports --loglevel TRACE UiTests/TestSuite_android.robot
+            robot -d Reports/${{ matrix.api-level }} --loglevel TRACE UiTests/TestSuite_android.robot
 
       - name: Archive Test Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: Android Automation Reports
-          path: Reports
+          name: Android Automation (${{ matrix.api-level }}) Reports
+          path: Reports/${{ matrix.api-level }}
 
       - name: Stop Appium Server
         run: pkill -f appium
