--- a/.github/workflows/android_autotests.yml
+++ b/.github/workflows/android_autotests.yml
@@ -3,7 +3,7 @@ name: Android Automation
 on:
   push:
     branches:
-      - update_action
+      - master
   pull_request:
     branches:
       - master
