--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -10,32 +10,32 @@ on:
   workflow_dispatch:
 
 jobs:
-  # autotests-first-version:
-  #   name: iOS ${{ vars.IOS_FIRST_DEVICE_VERSION }} Automation
-  #   runs-on: ${{ vars.IOS_FIRST_VM }}
+  autotests-first-version:
+    name: iOS ${{ vars.IOS_FIRST_DEVICE_VERSION }} Automation
+    runs-on: ${{ vars.IOS_FIRST_VM }}
 
-  #   steps:
-  #     - name: Checkout Automation Code
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Checkout Automation Code
+        uses: actions/checkout@v4
 
-  #     - name: Environment Setup
-  #       uses: ./.github/actions/setup
+      - name: Environment Setup
+        uses: ./.github/actions/setup
 
-  #     - name: iOS Environment Setup
-  #       uses: ./.github/actions/ios/setup
-  #       with:
-  #         ios-download-build: "${{ vars.IOS_BUILD_URL }}"
-  #         ios-model: "${{ vars.IOS_FIRST_DEVICE_MODEL }}"
-  #         ios-version: ${{ vars.IOS_FIRST_DEVICE_VERSION }}
+      - name: iOS Environment Setup
+        uses: ./.github/actions/ios/setup
+        with:
+          ios-download-build: "${{ vars.IOS_BUILD_URL }}"
+          ios-model: "${{ vars.IOS_FIRST_DEVICE_MODEL }}"
+          ios-version: ${{ vars.IOS_FIRST_DEVICE_VERSION }}
 
-  #     - name: Execute Automation Tests
-  #       uses: ./.github/actions/ios/autotests
-  #       with:
-  #         ios-model: ${{ vars.IOS_FIRST_DEVICE_MODEL }}
-  #         ios-version: ${{ vars.IOS_FIRST_DEVICE_VERSION }}
+      - name: Execute Automation Tests
+        uses: ./.github/actions/ios/autotests
+        with:
+          ios-model: ${{ vars.IOS_FIRST_DEVICE_MODEL }}
+          ios-version: ${{ vars.IOS_FIRST_DEVICE_VERSION }}
 
-  #     - name: Workflow Teardown
-  #       uses: ./.github/actions/ios/teardown
+      - name: Workflow Teardown
+        uses: ./.github/actions/ios/teardown
 
   autotests-second-version:
     name: iOS ${{ vars.IOS_SECOND_DEVICE_VERSION }} Automation
