--- a/.github/workflows/android_autotests.yml
+++ b/.github/workflows/android_autotests.yml
@@ -3,7 +3,7 @@ name: Android Automation
 on:
   push:
     branches:
-      - master
+      - update_action
   pull_request:
     branches:
       - master
@@ -14,7 +14,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        api-level: [31, 33]
+        api-level: [29, 30, 31, 32, 33]
     steps:
       - name: Checkout Automation Code
         uses: actions/checkout@v4
