--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -3,7 +3,7 @@ name: iOS Automation
 on:
   push:
     branches:
-      - update_action
+      - master
   pull_request:
     branches:
       - master
