--- a/.github/actions/ios/setup/action.yml
+++ b/.github/actions/ios/setup/action.yml
@@ -28,10 +28,24 @@ runs:
       run: xcrun simctl list devices
       shell: bash
 
+    - name: Checkout Application Code
+      uses: actions/checkout@v4
+      with:
+        repository: huynhlan21/test
+        ref: build
+        path: App
+
+    - name: Build for iOS Similators
+      run: |
+        cd App
+        eas build --profile simulator --platform ios
+        eas build:list --json --non-interactive --limit=1 --platform=ios | jq -r .[0].artifacts.buildUrl
+        echo "ios-download-build=$(eas build:list --json --non-interactive --limit=1 --platform=ios | jq -r .[0].artifacts.buildUrl)" >> $GITHUB_ENV
+
     - name: Download and Extract iOS Build
       run: |
-        wget -O ios_build.tar.gz ${{ inputs.ios-download-build }}
-        mkdir -p App
+        wget -O ios_build.tar.gz ${{ env.ios-download-build }}
+        # mkdir -p App
         mv ios_build.tar.gz App/
         cd App
         tar -xzf ios_build.tar.gz
