--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -17,3 +17,10 @@ runs:
         source venv/bin/activate
         pip install -r requirements.txt
       shell: bash
+
+    - name: 🛠️ Setup Expo
+      uses: expo/expo-github-action@v8
+      with:
+        expo-version: latest
+        eas-version: latest
+        token: ${{ secrets.EXPO_TOKEN }}
