--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -48,6 +48,13 @@ jobs:
       - name: Environment Setup
         uses: ./.github/actions/setup
 
+      - name: 🛠️ Setup Expo
+        uses: expo/expo-github-action@v8
+        with:
+          expo-version: latest
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
+
       - name: iOS Environment Setup
         uses: ./.github/actions/ios/setup
         with:
