download app file

--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -45,12 +45,12 @@ jobs:
       - name: Checkout Automation Code
         uses: actions/checkout@v4
 
-      - name: 🛠️ Setup Expo
-        uses: expo/expo-github-action@v8
-        with:
-          expo-version: latest
-          eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
+      # - name: 🛠️ Setup Expo
+      #   uses: expo/expo-github-action@v8
+      #   with:
+      #     expo-version: latest
+      #     eas-version: latest
+      #     token: ${{ secrets.EXPO_TOKEN }}
 
       # - name: Checkout Application Code
       #   uses: actions/checkout@v4
@@ -67,13 +67,12 @@ jobs:
       #     eas build:list --json --non-interactive --limit=1 --platform=ios | jq -r .[0].artifacts.buildUrl
       #     echo "ios-download-build=$(eas build:list --json --non-interactive --limit=1 --platform=ios | jq -r .[0].artifacts.buildUrl)" >> $GITHUB_ENV
 
-      - name: Download and Extract iOS Build
-        run: |
-          wget -O ios_build.tar.gz ${{ env.ios-download-build }}
-          mkdir -p App
-          mv ios_build.tar.gz App/
-          cd App
-          tar -xzf ios_build.tar.gz
+      # - name: Download and Extract iOS Build
+      #   run: |
+      #     wget -O ios_build.tar.gz ${{ env.ios-download-build }}
+      #     mv ios_build.tar.gz App/
+      #     cd App
+      #     tar -xzf ios_build.tar.gz
 
       - name: Environment Setup
         uses: ./.github/actions/setup
