download app file

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -13,7 +13,7 @@ runs:
 
     - name: Install Dependencies
       run: |
-        python3 -m venv venv
-        source venv/bin/activate
+        # python3 -m venv venv
+        # source venv/bin/activate
         pip install -r requirements.txt
       shell: bash
