--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -11,9 +11,13 @@ runs:
       with:
         python-version: "3.12.0"
 
+    - name: Active venv
+      run: |
+        python3 -m venv venv
+        source venv/bin/activate
+      shell: bash
+
     - name: Install Dependencies
       run: |
-        # python3 -m venv venv
-        # source venv/bin/activate
         pip install -r requirements.txt
       shell: bash
