--- a/.github/actions/ios/setup/action.yml
+++ b/.github/actions/ios/setup/action.yml
@@ -14,6 +14,7 @@ runs:
       run: |
         npm i --location=global appium
         appium driver install xcuitest
+        npm i appium-webdriveragent
       shell: bash
 
     - name: Set Up Xcode
