--- a/.github/actions/ios/setup/action.yml
+++ b/.github/actions/ios/setup/action.yml
@@ -29,14 +29,14 @@ runs:
     #   run: xcrun simctl list devices
     #   shell: bash
 
-    # - name: Download and Extract iOS Build
-    #   run: |
-    #     mkdir -p App
-    #     wget -O ios_build.tar.gz ${{ inputs.ios-download-build }}
-    #     mv ios_build.tar.gz App/
-    #     cd App
-    #     tar -xzf ios_build.tar.gz
-    #   shell: bash
+    - name: Download and Extract iOS Build
+      run: |
+        mkdir -p App
+        wget -O ios_build.tar.gz ${{ inputs.ios-download-build }}
+        mv ios_build.tar.gz App/
+        cd App
+        tar -xzf ios_build.tar.gz
+      shell: bash
 
     - name: Set Up iOS Simulator
       id: setup-simulator
