--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -95,8 +95,8 @@ jobs:
     name: iOS Automation Test
     runs-on: macos-13
     env:
-      IOS_MODEL: iPhone 14
-      IOS_VERSION: 16.4
+      F_IOS_MODEL: iPhone 14
+      F_IOS_VERSION: 16.4
 
     steps:
       - name: Cancel Previous Runs
@@ -141,8 +141,8 @@ jobs:
       - name: Install Appium
         run: |
           npm i --location=global appium
-          appium driver install xcuitest
           npm i appium-webdriveragent
+          appium driver install xcuitest
 
       - name: Set Up Xcode
         run: sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
@@ -153,7 +153,7 @@ jobs:
       - name: Download and Extract iOS Build
         run: |
           mkdir -p App
-          wget -O ios_build.tar.gz ${{ inputs.ios-download-build }}
+          wget -O ios_build.tar.gz ${{ vars.IOS_BUILD_URL }}
           mv ios_build.tar.gz App/
           cd App
           tar -xzf ios_build.tar.gz
@@ -162,8 +162,8 @@ jobs:
         id: setup-simulator
         uses: futureware-tech/simulator-action@v3
         with:
-          model: "${{ env.ios-model }}"
-          os_version: ${{ env.ios-version }}
+          model: "${{ env.F_IOS_MODELl }}"
+          os_version: ${{ env.F_IOS_VERSION }}
 
       - name: Set Environment Variables for Simulator
         id: set-env-simulator
@@ -172,8 +172,8 @@ jobs:
       - name: Execute Automation Tests
         uses: ./.github/actions/ios/autotests
         with:
-          ios-model: ${{ env.ios-model }}
-          ios-version: ${{ env.ios-version }}
+          ios-model: ${{ env.F_IOS_MODELl }}
+          ios-version: ${{ env.F_IOS_VERSION }}
 
       - name: Workflow Teardown
         uses: ./.github/actions/ios/teardown
