--- a/.github/workflows/ios_autotests.yml
+++ b/.github/workflows/ios_autotests.yml
@@ -143,7 +143,8 @@ jobs:
           npm i --location=global appium
           npm i appium-webdriveragent
           appium driver install xcuitest
-          ls -R
+          cd .appium/node_modules/appium-xcuitest-driver/node_modules/appium-webdriveragent/
+          ls
 
       - name: Set Up Xcode
         run: sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
